@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,24 +25,29 @@
  * @test id=default
  * @bug 8312498
  * @summary Basic test for JVMTI GetThreadState with virtual threads
+ * @modules java.base/java.lang:+open
  * @library /test/lib
- * @run junit/othervm/native GetThreadStateTest
+ * @run junit/othervm/native --enable-native-access=ALL-UNNAMED GetThreadStateTest
  */
 
 /*
  * @test id=no-vmcontinuations
  * @requires vm.continuations
+ * @modules java.base/java.lang:+open
  * @library /test/lib
- * @run junit/othervm/native -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations GetThreadStateTest
+ * @run junit/othervm/native -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations --enable-native-access=ALL-UNNAMED GetThreadStateTest
  */
 
 import java.util.StringJoiner;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.LockSupport;
 
+import jdk.test.lib.thread.VThreadRunner;
 import jdk.test.lib.thread.VThreadPinner;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import static org.junit.jupiter.api.Assertions.*;
 
 class GetThreadStateTest {
@@ -51,6 +56,11 @@ class GetThreadStateTest {
     static void setup() {
         System.loadLibrary("GetThreadStateTest");
         init();
+
+        // need >=2 carriers for testing pinning when main thread is a virtual thread
+        if (Thread.currentThread().isVirtual()) {
+            VThreadRunner.ensureParallelism(2);
+        }
     }
 
     /**
@@ -105,21 +115,29 @@ class GetThreadStateTest {
     }
 
     /**
-     * Test state of thread waiting to enter a monitor.
+     * Test state of thread waiting to enter a monitor when pinned and not pinned.
      */
-    @Test
-    void testMonitorEnter() throws Exception {
-        var started = new AtomicBoolean();
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testMonitorEnter(boolean pinned) throws Exception {
+        var ready = new AtomicBoolean();
         Object lock = new Object();
         var thread = Thread.ofVirtual().unstarted(() -> {
-            started.set(true);
-            synchronized (lock) { }
+            if (pinned) {
+                VThreadPinner.runPinned(() -> {
+                    ready.set(true);
+                    synchronized (lock) { }
+                });
+            } else {
+                ready.set(true);
+                synchronized (lock) { }
+            }
         });
         try {
             synchronized (lock) {
                 // start thread and wait for it to start execution
                 thread.start();
-                awaitTrue(started);
+                awaitTrue(ready);
 
                 // thread should block on monitor enter
                 int expected = JVMTI_THREAD_STATE_ALIVE | JVMTI_THREAD_STATE_BLOCKED_ON_MONITOR_ENTER;
@@ -135,23 +153,31 @@ class GetThreadStateTest {
     }
 
     /**
-     * Test state of thread waiting in Object.wait().
+     * Test state of thread waiting in Object.wait() when pinned and not pinned.
      */
-    @Test
-    void testObjectWait() throws Exception {
-        var started = new AtomicBoolean();
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testObjectWait(boolean pinned) throws Exception {
+        var ready = new AtomicBoolean();
         Object lock = new Object();
         var thread = Thread.ofVirtual().start(() -> {
             synchronized (lock) {
-                started.set(true);
                 try {
-                    lock.wait();
+                    if (pinned) {
+                        VThreadPinner.runPinned(() -> {
+                            ready.set(true);
+                            lock.wait();
+                        });
+                    } else {
+                        ready.set(true);
+                        lock.wait();
+                    }
                 } catch (InterruptedException e) { }
             }
         });
         try {
             // wait for thread to start execution
-            awaitTrue(started);
+            awaitTrue(ready);
 
             // thread should wait
             int expected = JVMTI_THREAD_STATE_ALIVE |
@@ -177,23 +203,33 @@ class GetThreadStateTest {
     }
 
     /**
-     * Test state of thread waiting in Object.wait(millis).
+     * Test state of thread waiting in Object.wait(millis) when pinned and not pinned.
      */
-    @Test
-    void testObjectWaitMillis() throws Exception {
-        var started = new AtomicBoolean();
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testObjectWaitMillis(boolean pinned) throws Exception {
+        var ready = new AtomicBoolean();
         Object lock = new Object();
         var thread = Thread.ofVirtual().start(() -> {
             synchronized (lock) {
-                started.set(true);
-                try {
-                    lock.wait(Long.MAX_VALUE);
-                } catch (InterruptedException e) { }
+                synchronized (lock) {
+                    try {
+                        if (pinned) {
+                            VThreadPinner.runPinned(() -> {
+                                ready.set(true);
+                                lock.wait(Long.MAX_VALUE);
+                            });
+                        } else {
+                            ready.set(true);
+                            lock.wait(Long.MAX_VALUE);
+                        }
+                    } catch (InterruptedException e) { }
+                }
             }
         });
         try {
             // wait for thread to start execution
-            awaitTrue(started);
+            awaitTrue(ready);
 
             // thread should wait
             int expected = JVMTI_THREAD_STATE_ALIVE |
@@ -219,83 +255,31 @@ class GetThreadStateTest {
     }
 
     /**
-     * Test state of thread parked with LockSupport.park.
+     * Test state of thread parked with LockSupport.park when pinned and not pinned.
      */
-    @Test
-    void testPark() throws Exception {
-        var started = new AtomicBoolean();
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testPark(boolean pinned) throws Exception {
+        var ready = new AtomicBoolean();
         var done = new AtomicBoolean();
         var thread = Thread.ofVirtual().start(() -> {
-            started.set(true);
-            while (!done.get()) {
-                LockSupport.park();
-            }
-        });
-        try {
-            // wait for thread to start execution
-            awaitTrue(started);
-
-            // thread should park
-            int expected = JVMTI_THREAD_STATE_ALIVE |
-                    JVMTI_THREAD_STATE_WAITING |
-                    JVMTI_THREAD_STATE_WAITING_INDEFINITELY |
-                    JVMTI_THREAD_STATE_PARKED;
-            await(thread, expected);
-        } finally {
-            done.set(true);
-            LockSupport.unpark(thread);
-            thread.join();
-        }
-    }
-
-    /**
-     * Test state of thread parked with LockSupport.parkNanos.
-     */
-    @Test
-    void testParkNanos() throws Exception {
-        var started = new AtomicBoolean();
-        var done = new AtomicBoolean();
-        var thread = Thread.ofVirtual().start(() -> {
-            started.set(true);
-            while (!done.get()) {
-                LockSupport.parkNanos(Long.MAX_VALUE);
-            }
-        });
-        try {
-            // wait for thread to start execution
-            awaitTrue(started);
-
-            // thread should park
-            int expected = JVMTI_THREAD_STATE_ALIVE |
-                    JVMTI_THREAD_STATE_WAITING |
-                    JVMTI_THREAD_STATE_WAITING_WITH_TIMEOUT |
-                    JVMTI_THREAD_STATE_PARKED;
-            await(thread, expected);
-        } finally {
-            done.set(true);
-            LockSupport.unpark(thread);
-            thread.join();
-        }
-    }
-
-    /**
-     * Test state of thread parked with LockSupport.park while holding a monitor.
-     */
-    @Test
-    void testParkWhenPinned() throws Exception {
-        var started = new AtomicBoolean();
-        var done = new AtomicBoolean();
-        var thread = Thread.ofVirtual().start(() -> {
-            VThreadPinner.runPinned(() -> {
-                started.set(true);
+            if (pinned) {
+                VThreadPinner.runPinned(() -> {
+                    ready.set(true);
+                    while (!done.get()) {
+                        LockSupport.park();
+                    }
+                });
+            } else {
+                ready.set(true);
                 while (!done.get()) {
                     LockSupport.park();
                 }
-            });
+            }
         });
         try {
             // wait for thread to start execution
-            awaitTrue(started);
+            awaitTrue(ready);
 
             // thread should park
             int expected = JVMTI_THREAD_STATE_ALIVE |
@@ -311,23 +295,31 @@ class GetThreadStateTest {
     }
 
     /**
-     * Test state of thread parked with LockSupport.parkNanos while holding a monitor.
+     * Test state of thread parked with LockSupport.parkNanos when pinned and not pinned.
      */
-    @Test
-    void testParkNanosWhenPinned() throws Exception {
-        var started = new AtomicBoolean();
+    @ParameterizedTest
+    @ValueSource(booleans = { true, false })
+    void testParkNanos(boolean pinned) throws Exception {
+        var ready = new AtomicBoolean();
         var done = new AtomicBoolean();
         var thread = Thread.ofVirtual().start(() -> {
-            VThreadPinner.runPinned(() -> {
-                started.set(true);
+            if (pinned) {
+                VThreadPinner.runPinned(() -> {
+                    ready.set(true);
+                    while (!done.get()) {
+                        LockSupport.parkNanos(Long.MAX_VALUE);
+                    }
+                });
+            } else {
+                ready.set(true);
                 while (!done.get()) {
                     LockSupport.parkNanos(Long.MAX_VALUE);
                 }
-            });
+            }
         });
         try {
             // wait for thread to start execution
-            awaitTrue(started);
+            awaitTrue(ready);
 
             // thread should park
             int expected = JVMTI_THREAD_STATE_ALIVE |
